# doc2image

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
doc2image/: __main__.py  api.py  llm.py  pipeline.py  prompt.py
doc2image/configs/: config.yaml
doc2image/configs/agent/: default.yaml
doc2image/configs/parser/: default.yaml
doc2image/configs/pipeline/: default.yaml
doc2image/configs/prompts/: default.yaml
doc2image/database/: __init__.py  query.py  schema.py
doc2image/docs/: __init__.py  chunkenizer.py  parser.py  text_splitter.py
doc2image/llm/: __init__.py  base.py  ollama.py  openai.py
doc2image/ui/: rendering.py  utils.py
doc2image/ui/app/: Home.py
doc2image/ui/app/pages/: 1_Generate_images.py  2_Images_history.py
src/: main.py
src/configs/: config.yaml
src/configs/agent/: default.yaml
src/configs/parser/: default.yaml
src/configs/prompts/: default.yaml
src/doc2image/: docs.py
src/doc2image/agent/: components.py  core.py
